fix: Change font size for autocomplete suggestions on mobile devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -494,6 +494,10 @@ body {
 
     }
 
+    .ui-menu-item {
+        font-size: 2.3em;
+    }
+
     .map-container {
         border: 1px dashed;
         border-color: #E8E8E8;
